# dango-shogi

./: .gitignore  README.md  mnist.ipynb  pyproject.toml  test.ipynb
pythondlshogi/: common.py  policy.py
