
[project]
name = "dangoshogi"
version = "0.0.0"
description = ""
authors = [
    {name = "dangoMM", email = "ocean.in.the.valley@gmail.com"},
]
dependencies = [
    "torch>=2.1.1",
    "torchvision>=0.16.1",
    "ipykernel>=6.27.1",
    "matplotlib>=3.8.2",
    "python-dlshogi @ file:///${PROJECT_ROOT}/",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/#egg=python-dlshogi",
]
